[projectfirma/#1839] Bug: Active state on project detail navigation is white text on white background updated styles for Rec to fix white text, also increased max-height on the nav container on project detail left side nav, so nav options don't get cut off

--- a/Source/ProjectFirma.Web/Content/Bootstrap/firma/bor.theme.less
+++ b/Source/ProjectFirma.Web/Content/Bootstrap/firma/bor.theme.less
@@ -92,7 +92,7 @@
 @firma-buttonBackground-color-hover: #aaa;
 @firma-buttonText-color-hover: #fff;
 
-@firma-scrollSpyAccent-color: #fff;
+@firma-scrollSpyAccent-color: @MainBlue;
 
 @firma-white: #fff;
 @firma-active-arrow-color: @SecondaryOrangeDeep;
@@ -696,7 +696,7 @@ footer#footer .hoverEditButton a.btn-firma, .hoverEditButton a.btn-firma {
     }
 
     nav#tableOfContents ul.nav li.active ul.nav {
-        max-height: 200px;
+        max-height: 230px;
     }
 
     nav#tableOfContents ul.nav li.active a {
